<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:res-auto="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_photo"
        android:title="@string/action_camera"
        res-auto:showAsAction="always"
        android:icon="@drawable/ic_action_photo"
        />
    <item android:id="@+id/action_speech"
        android:title="@string/action_speech"
        res-auto:showAsAction="always"
        android:icon="@drawable/ic_action_speech"
        />
    <item android:id="@+id/action_text"
        android:title="@string/action_text"
        res-auto:showAsAction="always"
        android:icon="@drawable/ic_action_text"
        />
    <item android:id="@+id/action_video"
        android:title="@string/action_video"
        res-auto:showAsAction="always"
        android:icon="@drawable/ic_action_video"
        />
    <item android:id="@+id/action_resume"
        android:title="@string/action_resume"
        res-auto:showAsAction="always"
        android:icon="@drawable/ic_action_walk_resume"
        />
    <item android:id="@+id/action_gallery"
          android:title="@string/action_gallery"
          res-auto:showAsAction="ifRoom"
          android:icon="@drawable/ic_action_gallery"
        />
    <item android:id="@+id/action_show_afs"
        android:title="@string/action_show_afs"
        res-auto:showAsAction="never"
        android:checkable="true"
        />
    <item android:id="@+id/action_where_am_i"
          android:title="@string/action_whereami"
          res-auto:showAsAction="never"
          android:checkable="true"
        />
    <item android:id="@+id/action_live_map"
          android:title="@string/action_live_map"
          res-auto:showAsAction="never"
          android:checkable="true"
        />
    <item android:id="@+id/action_autofocus"
          android:title="@string/action_autofocus"
          res-auto:showAsAction="never"
          android:checkable="true"
        />
    <item android:id="@+id/action_show_accuracy_circle"
        android:title="@string/action_show_accuracy_circle"
        res-auto:showAsAction="never"
        android:checkable="true"
        />
    <item android:id="@+id/action_show_trace"
        android:title="@string/action_show_trace"
        res-auto:showAsAction="never"
        android:checkable="true"
        />
    <item android:id="@+id/action_map_type_satelite"
          android:title="@string/action_map_type_satelite"
          res-auto:showAsAction="never"
          android:checkable="true"
        />
    <item android:id="@+id/action_map_type_terrain"
          android:title="@string/action_map_type_terrain"
          res-auto:showAsAction="never"
          android:checkable="true"
        />
    <item android:id="@+id/action_info"
          android:title="@string/action_info"
          res-auto:showAsAction="never"
          android:enabled="true"
          android:visible="true"
        />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          res-auto:showAsAction="never"
          android:enabled="true"
          android:visible="true"
        />
    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          res-auto:showAsAction="never"
          android:enabled="true"
          android:visible="true"
        />
    <item android:id="@+id/action_privacy_policy"
          android:title="@string/action_privacy_policy"
          res-auto:showAsAction="never"
          android:enabled="true"
          android:visible="true"
        />
</menu>

