<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anroid="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="recording_settings"
        android:title="@string/title_recording_settings"
        android:persistent="true">
        <EditTextPreference
            android:key="recording_max_seconds_between_points"
            android:title="@string/title_recording_max_seconds_between_points"
            android:summary="@string/summary_recording_max_seconds_between_points"
            android:numeric="integer"
            android:maxLength="3"
            android:defaultValue="60"
        		/>
        <!--ListPreference
            android:key="recording_max_seconds_between_points"
            android:title="@string/title_recording_max_seconds_between_points"
            android:summary="@string/summary_recording_max_seconds_between_points"
            android:defaultValue="1"
            android:entries="@array/listArray1"
            android:entryValues="@array/listValues1" /-->
        <EditTextPreference
            android:key="recording_min_meters_between_points"
            android:title="@string/title_recording_min_meters_between_points"
            android:summary="@string/summary_recording_min_meters_between_points"
            android:numeric="integer"
            android:maxLength="3"
            android:defaultValue="10"
        		/>
        <EditTextPreference
            android:key="recording_min_location_accuracy"
            android:title="@string/title_recording_min_location_accuracy"
            android:summary="@string/summary_recording_min_location_accuracy"
            android:numeric="integer"
            android:maxLength="3"
            android:defaultValue="50"
        		/>
        <EditTextPreference
            android:key="recording_location_request_interval"
            android:title="@string/title_recording_location_request_interval"
            android:summary="@string/summary_recording_location_request_interval"
            android:numeric="integer"
            android:maxLength="3"
            android:defaultValue="10"
            />
        <EditTextPreference
            android:key="recording_max_possible_speed"
            android:title="@string/title_recording_max_possible_speed"
            android:summary="@string/summary_recording_max_possible_speed"
            android:numeric="integer"
            android:maxLength="4"
            android:defaultValue="250"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="map_settings"
        android:title="@string/title_map_settings"
        android:persistent="true">
        <CheckBoxPreference
            android:key="map_show_address_in_markers"
            android:title="@string/title_map_show_address_in_markers"
            android:summary="@string/summary_map_show_address_in_markers"
            android:defaultValue="true"
        		/>
        <CheckBoxPreference
            android:key="map_show_details_in_markers"
            android:title="@string/title_map_show_details_in_markers"
            android:summary="@string/summary_map_show_details_in_markers"
            android:defaultValue="false"
        		/>
        <CheckBoxPreference
            android:key="map_show_netto_values_in_markers"
            android:title="@string/title_map_show_netto_values_in_markers"
            android:summary="@string/summary_map_show_netto_values_in_markers"
            android:defaultValue="false"
        		/>
        <CheckBoxPreference
            android:key="map_animated_cursor"
            android:title="@string/title_map_animated_cursor"
            android:summary="@string/summary_map_animated_cursor"
            android:defaultValue="false"
        		/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="gallery_settings"
        android:title="@string/title_gallery_settings"
        android:persistent="true">
        <EditTextPreference
            android:key="gallery_ribbon_height"
            android:title="@string/title_gallery_ribbon_height"
            android:summary="@string/summary_gallery_ribbon_height"
            android:numeric="integer"
            android:maxLength="2"
            android:defaultValue="10"
        		/>
    </PreferenceCategory>
</PreferenceScreen>

<!--
        <CheckBoxPreference
            android:key="map_show_altitude_in_markers"
            android:title="@string/title_map_show_altitude_in_markers"
            android:summary="@string/summary_map_show_altitude_in_markers"
            android:defaultValue="false"
        		/>
        <CheckBoxPreference
            android:key="map_show_point_number_in_markers"
            android:title="@string/title_map_show_point_number_in_markers"
            android:summary="@string/summary_map_show_point_number_in_markers"
            android:defaultValue="true"
        		/>
-->